cluster/uwsdev/gateway.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: munin-web
spec:
  type: ExternalName
  externalName: ca.uws.svc.cluster.local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-gateway
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/issuer: acme-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - devel.uws.talkingpts.org
      secretName: cluster-certificate
  rules:
    - host: devel.uws.talkingpts.org
      http:
        paths:
          - pathType: Prefix
            path: /(munin/.*)
            backend:
              service:
                name: munin-web
                port:
                  number: 80
          - pathType: Prefix
            path: /(munin-cgi/.*)
            backend:
              service:
                name: munin-web
                port:
                  number: 80
